--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta charset="utf-8">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.8.0/dist/leaflet.css"
           integrity="sha512-hoalWLoI8r4UszCkZ5kL8vayOGVae1oxXe/2A4AO6J9+580uKHDO3JdHb7NzwwzK5xr/Fs0W40kiNHxM9vyTtQ=="
           crossorigin=""/>
@@ -14,12 +15,22 @@
 </head>
 <body>
 
-<form method="post" action="/search">
-    <label for="state">Introduce un estado: </label>
-    <input type="text" id="state" name="state"
-            required="true" />
-    <button type="submit">Buscar</button>
-</form>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container">
+        <a class="navbar-brand"  href="/">Buscador de tornados</a>
+
+                <form method="post" action="/search">
+                    <label for="state">Introduce un estado: </label>
+                    <input type="text" id="state" name="state"
+                           required="true" />
+                    <button class="btn btn-success"  type="submit">Buscar</button>
+                </form>
+
+            </div>
+    </div>
+</nav>
+
+
 
     <div id="map"></div>
 
@@ -38,17 +49,7 @@
         var lon = "{{item.lon}}"
         var title = "{{item.title}}"
     </script>
-    <script>
-        console.log(lat)
-        console.log(lon)
-        console.log(title
-        )
-        L.marker([lat, lon]).addTo(map)
-            .bindPopup(title)
-            .openPopup();
-
-        map.panTo(new L.LatLng(lat, lon));
-    </script>
+    <script src="js/marcador.js"></script>
     {% endfor %}
 
 
